--- a/src/components/main/DropAside/DropAside.scss
+++ b/src/components/main/DropAside/DropAside.scss
@@ -1,4 +1,4 @@
-.drop_down_container {
+.drop_aside_container { 
   display: flex;
   width: 30px;
   padding-left: 8px;
